--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
-    "react-dom": "^19.2.4",
+    "@supabase/supabase-js": "^2.98.0",
     "lucide-react": "^0.563.0",
-    "react": "^19.2.4"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
